# nelson-lab-to-nwb

./: .gitignore  LICENSE  README.md  dandi.md  make_env.yml  pyproject.toml  requirements.txt  setup.py
examples/: conversion_creed_2024.ipynb  convert_blackrock.ipynb  convert_creed_2024.ipynb  convert_intan.ipynb  convert_miniscope.ipynb  convert_noldus.ipynb  convert_plexon.ipynb  convert_plexon_nex.ipynb  convert_tdt.ipynb
src/nelson_lab_to_nwb/blackrock_sessions_converter/: README.md  __init__.py  blackrock_convert_session.py  blackrock_converter.py  convert_session.py  example_conversion.ipynb  metadata_example.yaml  metadata_example_2.yaml  update_blackrock_nwb_file.py  update_blackrock_sessions.md
src/nelson_lab_to_nwb/creed_2024/: __init__.py  creed_2024_convert_session.py  metadata_example.yaml  paz_2024_converter.py
src/nelson_lab_to_nwb/creed_2024_converter/: __init__.py  creed_2024_convert_session.py  creed_2024_converter.py  metadata_example.yaml
src/nelson_lab_to_nwb/intan_sessions_converter/: README.md  __init__.py  convert_session.py  example_conversion.ipynb  intan_convert_session.py  intan_converter.py  metadata_example.yaml
src/nelson_lab_to_nwb/interfaces/: __init__.py  aim_score_interface.py  cognitive_behavioral_interface.py  intan_multi_interface.py  metadata_example.yaml  nex_interface.py  noldus_interface.py  tdt_interface.py
src/nelson_lab_to_nwb/paz_2024/: metadata_example.yaml  paz_2024_behavior_interface.py  paz_2024_converter.py
src/nelson_lab_to_nwb/paz_2024_converter/: metadata_example.yaml  paz_2024_converter.py
src/nelson_lab_to_nwb/plexon_sessions_converter/: README.md  __init__.py  convert_session.py  metadata_example.yaml  plexon_convert_session.py  plexon_converter.py
src/nelson_lab_to_nwb/tdt_sessions_converter/: __init__.py  convert_session.py  metadata_example.yaml  tdt_converter.py
src/nelson_lab_to_nwb/utils/: __init__.py  probe.py
