[project]
name = "nelson-lab-to-nwb"
version = "0.1.0"
description = "NWB conversion scripts, functions, and classes for Nelson Lab conversion"
readme = "README.md"
authors = [{ name = "CatalystNeuro", email = "ben.dichter@catalystneuro.com" }]
maintainers = [
    { name = "CatalystNeuro", email = "ben.dichter@catalystneuro.com" },
]
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "neuroconv==0.6.0",
    "spikeinterface>=0.101.0",
    "dandi>=0.62.4",
    "dandischema>=0.10.2",
    "nwbwidgets==0.11.3",
    "nwbinspector>=0.4.33",
    "ndx-events==0.2.0",
    "tdt==0.6.5",
    "PyYAML==6.0.1",
    "openpyxl==3.1.2",
    "pandas>=2.2.0",
    "opencv-python-headless",
    "ndx-fiber-photometry==0.1.0",
]

[project.urls]
Repository = "https://github.com/catalystneuro/nelson-lab-to-nwb"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
